# notes-recall

./: .gitignore  main.py  pyproject.toml
.github/workflows/: pylint.yml
data_cleaning/: ingestion.py  rag.py
db/: chromadb_client.py
llm/: llm_client.py
